[package]
name = "rt-graph"
description = "A real-time graphing experiment written in Rust."
version = "0.3.3"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"
repository = "https://github.com/fluffysquirrels/rt-graph-rs/"
license = "MIT"
categories = ["graphics", "gui", "visualization"]
keywords = ["graphics", "graph", "plotting", "visualization"]
readme = "README.md"

[dependencies]
cairo-rs = "0.9.1"
derive_builder = "0.9.0"
env_logger = "0.7.1"
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.0"
gtk = "0.9.0"
log = "0.4.11"
once_cell = "1.4.0"
rand = "0.7"

[workspace]
members = [
    "examples/simple",
]