[package]
name = "rt-graph"
version = "0.1.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
env_logger = "0.7.1"
glium = "0.27.0"
log = "0.4.11"
once_cell = "1.4.0"
rand = "0.7"

[workspace]
members = [
    "examples/gtk",
]